--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Homeworks_Kotlin</string>
+    <string name="sum">cложить</string>
+    <string name="sub">отнять</string>
+    <string name="multi">умножить</string>
 </resources>
